--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -139,7 +139,7 @@
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_mygrxx" id="div_wtjj_inner_mygrxx" style="display:none;height:350px;">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_mygrxx" id="div_wtjj_inner_mygrxx" style="display:none;">
                         根据您的问题，我们建议您：
                         <div class="div_wtjj_inner_mygrxx_inner">
                             建议您在您被冒用的对应的信息页面中点击“举报”按钮进行举报并详细说明情况以便核实后处理。具体的按钮位置为： <br />
@@ -205,7 +205,7 @@
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_zhbdjdyyssm" id="div_wtjj_inner_zhbdjdyyssm" style="display:none;height:356px;">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_zhbdjdyyssm" id="div_wtjj_inner_zhbdjdyyssm" style="display:none;">
                         根据您的问题，我们建议您：
                         <div>
                             &nbsp;&nbsp;&nbsp;&nbsp;您好，发布以下情况的信息，会无法解冻，建议您按照信息小镇发帖版规操作：<br />
@@ -231,7 +231,7 @@
                         <span class="span_wtjj_inner" id="span_wtjj_inner_bpwzjdyy">1、被判为职介的原因</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_fbzpxxsbpwzj">2、发布招聘信息时被判为职介</span>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_bpwzjdyy" id="div_wtjj_inner_bpwzjdyy" style="display:none;height:210px;">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_bpwzjdyy" id="div_wtjj_inner_bpwzjdyy" style="display:none;">
                         根据您的问题，我们建议您：
                         <div>
                             如果您的账户出现以下情况，会被判为职介：<br />
@@ -240,7 +240,7 @@
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_fbzpxxsbpwzj" id="div_wtjj_inner_fbzpxxsbpwzj" style="display:none;height:210px;">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_fbzpxxsbpwzj" id="div_wtjj_inner_fbzpxxsbpwzj" style="display:none;">
                         根据您的问题，我们建议您：
                         <div>
                             由于近期招聘类别发现虚假信息较多，发布信息暂时做了调整，发布信息时必须要通过营业执照以及组织机构代码证、税务登记证、开户许可证其中一项，验证成功后才可更改身份：<br />
@@ -297,7 +297,7 @@
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_xyxggsm" id="div_wtjj_inner_xyxggsm" style="display:none;height:205px;">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xyxggsm" id="div_wtjj_inner_xyxggsm" style="display:none;">
                         根据您的问题，我们建议您：
                         <div>
                             1、首先请您去认证管理查询您的营业执照是否被认证。<br />
@@ -306,7 +306,7 @@
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_yyzzrztbg" id="div_wtjj_inner_yyzzrztbg" style="display:none;height:323px;">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_yyzzrztbg" id="div_wtjj_inner_yyzzrztbg" style="display:none;">
                         根据您的问题，我们建议您：
                         <div>
                             您好，认证审核时间为2-5个工作日，请您耐心等待。<br />
@@ -392,7 +392,7 @@
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_sqtkdz" id="div_wtjj_inner_sqtkdz" style="display:none;height:217px;">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_sqtkdz" id="div_wtjj_inner_sqtkdz" style="display:none;">
                         根据您的问题，我们建议您：
                         <div>
                             如果您第一次申请退款，卖家同意后，3-10个工作日到账。<br />
@@ -401,7 +401,7 @@
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
-                    <div class="div_qtxxmy_inner div_wtjj_inner_zdyfk" id="div_wtjj_inner_zdyfk" style="display:none; height:313px;">
+                    <div class="div_qtxxmy_inner div_wtjj_inner_zdyfk" id="div_wtjj_inner_zdyfk" style="display:none;">
                         根据您的问题，我们建议您：
                         <div>
                             建议您稍后清理电脑缓存后刷新页面查看。 如果您没有取消置顶，而置顶信息却在列表的置顶位置不见了。<br />
@@ -467,7 +467,7 @@
                     <div class="div_qtxxmy_inner div_wtjj_inner_xxfbsb" id="div_wtjj_inner_xxfbsb" style="display:none;">
                         根据您的问题，我们建议您：
                         <div>
-                            请查看具体的信息发布失败原因。<br />
+                            请查看具体的<span class="span_href">信息发布失败原因</span>。<br />
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
@@ -491,6 +491,77 @@
                             1、首先请您去认证管理查询您的营业执照是否被认证。<br />
                             2、如果您的营业执照没有经过验证则可以通过进行营业执照认证过程中可以修改公司名称，系统审核通过后会为您自动更改过来（注，只有此一次修改机会；<br />
                             3、如果您的营业执照已经认证，则无法更改公司名称，您可以留存该账户，注册一个新的账户并认证新公司名称。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xyscxx" id="div_wtjj_inner_xyscxx" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            建议您直接去<span class="span_href">自助删除信息</span>，立即解决问题，无需等待。<br />
+                            自助删除信息中您有以下三种方式可以选择：<br />
+                            1.<span class="span_href">登录账户修改/删除信息</span>（会员通过用户中心修改/删除自己发布的信息）；<br />
+                            2.<span class="span_href">手机短信删除</span>（电话被冒用或忘记密码可以使用此功能）；<br />
+                            3.拨打电话4007585858 拨通后按号码键 3 直接删除该电话号码下的所有信息。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_zpxggsmc" id="div_wtjj_inner_zpxggsmc" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            请在用户中心的招聘/简历公司资料中填写相关信息。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_sbddxyzm" id="div_wtjj_inner_sbddxyzm" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            如果接收短信验证码的手机未能及时收到，可按以下流程操作：<br />
+                            第一步：使用短信验证时填写的手机或座机号拨打信息小镇专用400电话：4007585858。<br />
+                            第二步：接通电话后，按号码键： 5 进入语音验证码获取通道。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xghsjrz" id="div_wtjj_inner_xghsjrz" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            建议您去进行<span class="span_href">快速自助人工更换/取消手机认证</span>。立刻解决问题，无需等待。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_yyzzwfsc" id="div_wtjj_inner_yyzzwfsc" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            请您确认以下情况：<br />
+                            1.申请执照认证时执照资料需要填写完整，请您确认下是否有漏填项；<br />
+                            2.图片是否超于10M，如果超于10M，请将图片缩小后重新上传保存（可以ctrl+ALT+A截图）；<br />
+                            3.如果以上均无问题，请您填表单联系客服，提供您上传的执照图片及用户名密码，注明浏览器的版本，以便工作人员为您测试。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_yyzzyzbl" id="div_wtjj_inner_yyzzyzbl" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            您好，认证审核时间为2-5个工作日，如果您超过5个工作日仍没有通过验证，请您对照看看是否出现以下问题：<br />
+                            （1）上传营业执照时填写的公司名称和别称与证书不符，建议您在上传时填写一致后重新提交；<br />
+                            （2）证书图片不清晰或营业执照非原件副本数码照；<br />
+                            （3）提交信息与证书不符，如，营业执照注册号错误；<br />
+                            （4）证书没有年检章审核；<br />
+                            （5）冒充他人企业，在没有提供证明之前其信息会做删除处理。如果您存在以上问题，请您修改后再重新上传。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_xxsxbl" id="div_wtjj_inner_xxsxbl" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            请您检查您是否使用多账号来发布信息导致您的信息靠后显示并无法刷新，此行为是严重违反版规规则的，请您耐心等待,七个工作日之内不要进行任何操作,七个工作日（不包含周六，周日）后固定一个账户及手机号码发布信息。<br />
+                            若不存在以上情况，请您点击下方“填表单，联系客服”按钮，说明具体问题并提交。<br />
+                            <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
+                        </div>
+                    </div>
+                    <div class="div_qtxxmy_inner div_wtjj_inner_yrkyzdnr" id="div_wtjj_inner_yrkyzdnr" style="display:none;">
+                        根据您的问题，我们建议您：
+                        <div>
+                            百度搜索引擎收录信息都是从各大网站随机抽取的，如您想要删除百度快照信息，建议您去自助删除百度快照,或具体咨询百度公司。<br />
                             <input class="btn btn-info" type="button" style="margin-top: 3px; width: 140px;" value="填表单，联系客服" onclick="TBD()" />
                         </div>
                     </div>
