--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
@@ -1,11 +1,11 @@
 ﻿.div_body {
     width: 100%;
-    height: 760px;
     display: block;
     border: 1px solid #DEDEDE;
     margin-top: 20px;
     background-color: #FBFBFB;
     font-family: 宋体;
+    padding-top: 20px;
 }
 
 .div_content {
@@ -21,40 +21,6 @@
 
 .div_content_wtjj {
     height: 340px;
-}
-
-.span_step_text {
-    font-size: 16px;
-    font-weight: 700;
-    height: 30px;
-    vertical-align: top;
-    margin-top: 2px;
-    margin-left: 10px;
-    display: inline-block;
-}
-
-.span_step_first {
-    width: 30px;
-    height: 30px;
-    margin-left: 18px;
-    display: inline-block;
-    background-image: url(../images/one-blue.png);
-}
-
-.span_step_second {
-    width: 30px;
-    height: 30px;
-    margin-left: 18px;
-    display: inline-block;
-    background-image: url(../images/two-blue.png);
-}
-
-.span_step_third {
-    width: 30px;
-    height: 30px;
-    margin-left: 18px;
-    display: inline-block;
-    background-image: url(../images/three-blue.png);
 }
 
 .div_wtlx {
@@ -98,10 +64,12 @@
     height: 35px;
     display: inline-block;
     float: left;
-    background-color: #eBeBeB;
+    background-color: #fff;
     cursor: pointer;
     padding-top: 6px;
+    padding-left: 10px;
     margin-right: 10px;
+    border: 1px solid #DEDEDE;
 }
 
 .table_wtjj {
@@ -116,7 +84,7 @@
 
 .td_wtjj_inner_left {
     font-weight: 700;
-    width: 65px;
+    width: 100px;
     text-align: right;
 }
 
@@ -155,7 +123,7 @@
     }
 
 .textarea_mswt {
-    width: 500px;
+    width: 491px;
     height: 200px;
     background-color: #fff;
     border: 1px solid #DEDEDE;
@@ -211,17 +179,3 @@
     height: 233px;
     background-image: url(../images/BZZX//bzzx_lxkf_mygrxx.png);
 }
-
-.span_second_lx {
-    font-size: 14px;
-    color: #ff6a00;
-}
-
-.span_href {
-    color: #0000cd;
-    cursor: pointer;
-}
-
-    .span_href:hover {
-        text-decoration: underline;
-    }
