--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -117,9 +117,9 @@
                                 <span>已上传图片1/5，最多可上传5张图片，支持：jpg/gif/png格式 </span>
                             </td>
                         </tr>
-                        <tr class="tr_wtjj">
+                        <tr class="tr_wtjj" style="height:65px;vertical-align:top;">
                             <td class="td_wtjj_inner_left"></td>
-                            <td class="td_wtjj_inner_right">
+                            <td class="td_wtjj_inner_right" style="padding-top:10px;">
                                 <input class="button" type="button" value="提交问题" style="width:153px; height:44px" />
                             </td>
                         </tr>
