--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
@@ -127,12 +127,13 @@
     height: 200px;
     background-color: #fff;
     border: 1px solid #DEDEDE;
-    display: block;
+    display: inline-block;
     margin-bottom: 10px;
     margin-top: 10px;
     border-radius: 4px;
     padding: 4px 9px;
     color: #999999;
+    float: left;
 }
 
 .button {
@@ -178,4 +179,11 @@
     width: 641px;
     height: 233px;
     background-image: url(../images/BZZX//bzzx_lxkf_mygrxx.png);
+}
+
+.span_info {
+    display: inline-block;
+    float: left;
+    margin-top: 14px;
+    margin-left: 10px;
 }
