--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
@@ -28,7 +28,10 @@
                 <tr class="tr_wtjj">
                     <td class="td_wtjj_inner_left" style="vertical-align:top;padding-top:15px;">意见内容：</td>
                     <td class="td_wtjj_inner_right">
-                        <textarea class="textarea_mswt" id="textarea_mswt">请描述您的具体问题，字数在15至300之间</textarea>
+                        <textarea class="textarea_mswt" id="textarea_yjnr">您可填写15-300字。
+您的意见若被采纳，会通过消息通知您，请关注消息更新记录
+                        </textarea>
+                        <span class="span_info" id="span_yjnrinfo"></span>
                     </td>
                 </tr>
                 <tr class="tr_wtjj">
@@ -41,7 +44,7 @@
                 <tr class="tr_wtjj" style="height:65px;vertical-align:top;">
                     <td class="td_wtjj_inner_left"></td>
                     <td class="td_wtjj_inner_right" style="padding-top:10px;">
-                        <input class="button" type="button" value="提交建议" style="width:153px; height:44px" />
+                        <input class="button" id="btnTJYJ" type="button" value="提交建议" style="width:153px; height:44px" />
                     </td>
                 </tr>
             </table>
