--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -233,6 +233,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divUploadOut" class="divUploadOut">
+                        图片上传
                         <form action="" enctype="multipart/form-data" id="myform" method="post">
                             <input id="inputUpload" unselectable="on" type="file" multiple="multiple" class="file" />
                         </form>
