--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
@@ -17,7 +17,7 @@
         <div class="div_wtjj_inner">
             <table class="table_wtjj">
                 <tr class="tr_wtjj">
-                    <td class="td_wtjj_inner_left">类别：</td>
+                    <td class="td_wtjj_inner_left"><span class="required" style="vertical-align: top">*</span>类别：</td>
                     <td class="td_wtjj_inner_right">
                         <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbsc">信息分类建议</span>
                         <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbfhxg">区域划分建议</span>
@@ -26,10 +26,11 @@
                     </td>
                 </tr>
                 <tr class="tr_wtjj">
-                    <td class="td_wtjj_inner_left" style="vertical-align:top;padding-top:15px;">意见内容：</td>
+                    <td class="td_wtjj_inner_left" style="vertical-align:top;padding-top:15px;"><span class="required" style="vertical-align: top">*</span>意见内容：</td>
                     <td class="td_wtjj_inner_right">
-                        <textarea class="textarea_mswt" id="textarea_yjnr">您可填写15-300字。
-您的意见若被采纳，会通过消息通知您，请关注消息更新记录
+                        <textarea class="textarea_mswt" id="textarea_yjnr">
+                            您可填写15-300字。
+                            您的意见若被采纳，会通过消息通知您，请关注消息更新记录
                         </textarea>
                         <span class="span_info" id="span_yjnrinfo"></span>
                     </td>
@@ -37,8 +38,12 @@
                 <tr class="tr_wtjj">
                     <td class="td_wtjj_inner_left">上传图片：</td>
                     <td class="td_wtjj_inner_right">
-                        <input type="button" value="图片上传" />
-                        <span>已上传图片1/5，最多可上传5张图片，支持：jpg/gif/png格式 </span>
+                        <div id="divUploadOut" class="divUploadOut">
+                            <form action="" enctype="multipart/form-data" id="myform" method="post">
+                                <input id="inputUpload" unselectable="on" type="file" multiple="multiple" class="file" />
+                            </form>
+                        </div>
+                        <span>已上传图片<span id="span_ysctp">0</span>/5，最多可上传5张图片，支持：jpg/gif/png格式 </span>
                     </td>
                 </tr>
                 <tr class="tr_wtjj" style="height:65px;vertical-align:top;">
