--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX.css
@@ -108,3 +108,98 @@
     margin: 2px 5px 0px 5px;
     display: inline-block;
 }
+
+
+.div_shadow {
+    display: none;
+    background-color: #000;
+    opacity: 0.5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+.div_editImgWindow {
+    display: none;
+    border-radius: 4px;
+    width: 936px;
+    height: 562px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 1000;
+    background: #fff;
+    margin-top: -290px;
+    margin-left: -467px;
+}
+
+
+#canvasFrame {
+    z-index: 1001;
+    position: absolute;
+    left: 75.5px;
+    top: 56px;
+    width: 785px;
+    height: 435px;
+    background-color: #E1E1E1;
+}
+
+#canvas {
+    left: 0px;
+    top: 0px;
+    position: absolute;
+}
+
+.editToolButton {
+    height: 60px;
+    width: 60px;
+    display: inline-block;
+    cursor: pointer;
+    position: relative;
+    color: gray;
+}
+
+    .editToolButton span {
+        display:inline-block;
+        position:absolute;
+        bottom:3px;
+        left:15px;
+    }
+
+.editButtonIcon {
+    height:27px;
+    width:27px;
+    position:absolute;
+    left:17px;
+    top:5px;
+}
+
+
+#editImgHead {
+    width: 100%;
+    height: 65px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 14px;
+    cursor: default;
+}
+
+    #editImgHead span {
+        font-size: 16px;
+        font-weight: 700;
+        position: absolute;
+        top: 20px;
+        left: 25px;
+    }
+
+    #editImgHead div {
+        height: 17px;
+        width: 17px;
+        position: absolute;
+        right: 25px;
+        top: 25px;
+        background-image: url(../images/close.png);
+        cursor: pointer;
+    }
