--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
@@ -212,3 +212,128 @@
     opacity: 0;
     cursor: pointer;
 }
+
+
+.imgTip {
+    width: 18px;
+    height: 18px;
+    margin-right: 2px;
+}
+
+.liImg {
+    display: inline-block;
+    width: 130px;
+    height: 100px;
+    position: relative;
+    float: left;
+    margin-right: 10px;
+}
+
+.divImg {
+    width: 130px;
+    height: 100px;
+    display: inline-block;
+    margin-right: 10px;
+    border-radius: 4px;
+    overflow: hidden;
+    cursor: move;
+}
+
+.toolbar_wrap {
+    width: 84px;
+    height: 20px;
+    cursor: move;
+    display: none;
+}
+
+    .toolbar_wrap:hover {
+        display: block;
+        width: 130px;
+        height: 100px;
+        position: absolute;
+        top: 20px;
+        left: 0;
+        cursor: move;
+    }
+
+.opacity {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    background-color: #000;
+    opacity: 0.3;
+    z-index: 900;
+}
+
+.toolbar {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    z-index: 901;
+    cursor: default;
+}
+
+.edit {
+    background-image: url(../images/edit.png);
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    text-decoration: none;
+    right: 22px;
+    top: 0;
+    cursor: pointer;
+}
+
+    .edit:active {
+        background-image: url(../images/edit_select.png);
+    }
+
+
+.delete {
+    background-image: url(../images/delete.png);
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    text-decoration: none;
+    right: 0;
+    top: 0;
+    cursor: pointer;
+}
+
+    .delete:active {
+        background-image: url(../images/delete_select.png);
+    }
+
+#editImgWindow {
+    display: none;
+    border-radius: 4px;
+    width: 936px;
+    height: 562px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 1000;
+    background: #fff;
+    margin-top: -290px;
+    margin-left: -467px;
+}
+
+#toolBar {
+    position: absolute;
+    left: 76px;
+    top: 495px;
+    width: 785px;
+    height: 60px;
+}
+
+#editToolBar {
+    position: absolute;
+    left: 50%;
+    margin-left: -90px;
+}
