--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
@@ -11,6 +11,7 @@
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/BZZX/BZZX_WZJY.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/BZZX/BZZX_WZJY.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/BZZX/BZZX_WZJYZP.js")"></script>
 </head>
 <body>
     <div class="div_body">
@@ -38,6 +39,11 @@
                 <tr class="tr_wtjj">
                     <td class="td_wtjj_inner_left">上传图片：</td>
                     <td class="td_wtjj_inner_right">
+                        <div id="divFWZPValue" class="divFWCZ" style="display: none; text-align: left;">
+                            <div id="divImgs1" class="divRight" style="display: inline-block; width: 670px;">
+                                <ul id="ulImgs1" class="ulImgs" style="padding-left: 0px;"></ul>
+                            </div>
+                        </div>
                         <div id="divUploadOut" class="divUploadOut">
                             <form action="" enctype="multipart/form-data" id="myform" method="post">
                                 <input id="inputUpload" unselectable="on" type="file" multiple="multiple" class="file" />
