--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
@@ -29,9 +29,8 @@
                 <tr class="tr_wtjj">
                     <td class="td_wtjj_inner_left" style="vertical-align:top;padding-top:15px;"><span class="required" style="vertical-align: top">*</span>意见内容：</td>
                     <td class="td_wtjj_inner_right">
-                        <textarea class="textarea_mswt" id="textarea_yjnr">
-                            您可填写15-300字。
-                            您的意见若被采纳，会通过消息通知您，请关注消息更新记录
+                        <textarea class="textarea_mswt" id="textarea_yjnr">您可填写15-300字。
+您的意见若被采纳，会通过消息通知您，请关注消息更新记录
                         </textarea>
                         <span class="span_info" id="span_yjnrinfo"></span>
                     </td>
