--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
@@ -201,8 +201,8 @@
     height: 40px;
     display: inline-block;
     border: 1px solid #cccccc;
-    background-image:url(../images/BZZX/bzzx_wzyj_sctp.png);
-    background-size:100%;
+    background-image: url(../images/BZZX/bzzx_wzyj_sctp.png);
+    background-size: 100%;
 }
 
 .file {
@@ -240,10 +240,12 @@
 }
 
 .toolbar_wrap {
-    width: 84px;
-    height: 20px;
+    width: 130px;
+    height: 100px;
     cursor: move;
     display: none;
+    top: 0;
+    left: 0;
 }
 
     .toolbar_wrap:hover {
@@ -251,8 +253,6 @@
         width: 130px;
         height: 100px;
         position: absolute;
-        top: 20px;
-        left: 0;
         cursor: move;
     }
 
