--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -245,19 +245,19 @@
 }
 
 .toolbar_wrap {
-    width: 84px;
-    height: 20px;
+    width: 130px;
+    height: 100px;
     cursor: move;
     display: none;
+    position: absolute;
+    top: 20px;
+    left: 0;
 }
 
     .toolbar_wrap:hover {
         display: block;
         width: 130px;
         height: 100px;
-        position: absolute;
-        top: 20px;
-        left: 0;
         cursor: move;
     }
 
@@ -398,18 +398,18 @@
 }
 
     .editToolButton span {
-        display:inline-block;
-        position:absolute;
-        bottom:3px;
-        left:15px;
+        display: inline-block;
+        position: absolute;
+        bottom: 3px;
+        left: 15px;
     }
 
 .editButtonIcon {
-    height:27px;
-    width:27px;
-    position:absolute;
-    left:17px;
-    top:5px;
+    height: 27px;
+    width: 27px;
+    position: absolute;
+    left: 17px;
+    top: 5px;
 }
 
 .div_shadow {
@@ -420,4 +420,6 @@
     top: 0;
     left: 0;
     z-index: 999;
+    width: 100%;
+    height: 100%;
 }
