--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
@@ -54,7 +54,7 @@
                 <tr class="tr_wtjj" style="height:65px;vertical-align:top;">
                     <td class="td_wtjj_inner_left"></td>
                     <td class="td_wtjj_inner_right" style="padding-top:10px;">
-                        <input class="button" id="btnTJYJ" type="button" value="提交建议" style="width:153px; height:44px" />
+                        <input class="button" id="btnTJJY" type="button" value="提交建议" style="width:153px; height:44px" />
                     </td>
                 </tr>
             </table>
