--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_FWCZ/FC_FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_FWCZ/FC_FWCZ.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "FWCZ";
+    ViewBag.Title = "FC_FWCZ";
     Layout = "~/Areas/Business/Views/Shared/_ListLayout.cshtml";
 }
 
