--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "FC_FWCZ";
+    ViewBag.Title = "FC_DZF";
     Layout = "~/Areas/Business/Views/Shared/_ListLayout.cshtml";
 }
 
@@ -9,12 +9,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
-
-    <link href="@Url.Content("~/Areas/Business/Css/FWCZ.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/FC/FC_DZF.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FWCZ/FWCZ.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FWCZ/FWCZYZ.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FWCZ/FWCZZP.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_DZF.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_DZFYZ.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_DZFZP.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery.ui.datepicker-zh-CN.js")"></script>
 </head>
@@ -53,158 +52,50 @@
                     <span class="spanFWCZ">出租方式</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgZTCZ" /><label class="labelFWCZ">&nbsp;&nbsp;整套出租&nbsp;&nbsp;</label>
-                    <img class="iFWCZ" id="imgDJCZ" /><label class="labelFWCZ">&nbsp;&nbsp;单间出租</label>
-                </div>
-            </div>
-            <div id="divXQMC" class="divFWCZ" style="z-index: 1000">
-                <div class="divLeft">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">小区名称</span>
-                </div>
-                <div class="divRight">
-                    <div class="spanFWLXOut" style="z-index: 1000; position: relative">
-                        <div id="divXQMCText" class="spanFWLXIn SRK" style="border: none;">
-                            <input id="XQMC" maxlength="30" column="XQMC" class="spanFWLX SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px; color: #999999;" type="text" placeholder="请输入小区名称" />
-                        </div>
-                        <div id="divXQMClist" class="divdropdown" style="width: 594px;">
-                        </div>
-                    </div>
-                    <div id="divXQMCTip" class="Warn" style="z-index: 999; position: relative"></div>
+                    <img class="iFWCZ" id="imgZTCZ" /><label class="labelFWCZ">&nbsp;&nbsp;短租房&nbsp;&nbsp;</label>
+                    <img class="iFWCZ" id="imgDJCZ" /><label class="labelFWCZ">&nbsp;&nbsp;日租房</label>
                 </div>
             </div>
             <div id="divFWLX" class="divFWCZ">
                 <div class="divLeft">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">房屋类型</span>
-                </div>
-                <div class="divRight">
-                    <span id="spanS" class="spanFWLX">
-                        <input id="S" maxlength="2" column="S" class="inputFWLX spanFontColor" type="text" />
-                        <span class="spanFontColor">室</span>
-                    </span>
-                    <span id="spanT" class="spanFWLX">
-                        <input id="T" maxlength="2" column="T" class="inputFWLX spanFontColor" type="text" />
-                        <span class="spanFontColor">厅</span>
-                    </span>
-                    <span id="spanW" class="spanFWLX">
-                        <input id="W" maxlength="2" column="W" class="inputFWLX spanFontColor" type="text" />
-                        <span class="spanFontColor">卫</span>
-                    </span>
-                    <span id="spanPFM" class="spanFWLX" style="width: 198px">
-                        <span class="spanFontColor" style="margin-left: 8px">共</span>
-                        <input id="PFM" maxlength="7" column="PFM" class="inputFWLX spanFontColor" type="text" />
-                        <span class="spanFontColor">平（㎡）</span>
-                    </span>
-                    <div id="divFWLXTip" class="Warn"></div>
-                </div>
-            </div>
-            <div id="divFWQK" class="divFWCZ" style="z-index: 999">
-                <div class="divLeft">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">房屋情况</span>
+                    <span class="spanFWCZ">类型</span>
                 </div>
                 <div class="divRight">
                     <div class="spanFWLXOut">
-                        <div id="divFWCXText" class="spanFWLXIn SRK">
-                            <span id="spanFWCX" column="CX" class="spanFWQK spanFontColor">南北</span>
+                        <div id="divFWLXText" class="spanFWLXIn SRK">
+                            <span id="spanFWLX" column="FWLX" class="spanFWQK spanFontColor">请选择类型</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divFWCX" class="divdropdown">
+                        <div id="divFWLX" class="divdropdown">
                         </div>
                     </div>
-                    <div class="spanFWLXOut">
-                        <div id="divZXQKText" class="spanFWLXIn SRK">
-                            <span id="spanZXQK" column="ZXQK" class="spanFWQK spanFontColor">简单装修</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divZXQK" class="divdropdown">
-                        </div>
-                    </div>
-                    <div class="spanFWLXOut">
-                        <div id="divZZLXText" class="spanFWLXIn SRK">
-                            <span id="spanZZLX" column="ZZLX" class="spanFWQK spanFontColor">普通住宅</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divZZLX" class="divdropdown">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="divLCFB" class="divFWCZ" style="z-index: 998">
-                <div class="divLeft">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">楼层分布</span>
-                </div>
-                <div class="divRight">
-                    <span id="spanC" class="spanFWLX SRK">
-                        <span class="spanFontColor" style="margin-left: 8px">第</span>
-                        <input id="C" maxlength="2" column="C" class="inputLCFB spanFontColor" type="text" style="width: 70px" />
-                        <span class="spanFontColor">层</span>
+                    最短租期
+                    <span id="spanZDZQ" class="spanFWLX SRK" style="display: inline-block; width:114px;">
+                        <input id="ZDZQ" maxlength="9" column="ZDZQ" class="inputLCFB spanFontColor" type="text" style="width: 78px" />
+                        <span class="spanFontColor">天</span>
                     </span>
-                    <span id="spanGJC" class="spanFWLX SRK">
-                        <span class="spanFontColor" style="margin-left: 8px">共</span>
-                        <input id="GJC" maxlength="2" column="GJC" class="inputLCFB spanFontColor" type="text" style="width: 70px" />
-                        <span class="spanFontColor">层</span>
-                    </span>
-                    <div id="divLCFBTip" class="Warn"></div>
+                    <div id="divLXTip" class="Warn"></div>
                 </div>
             </div>
             <div id="divZJ" class="divFWCZ" style="z-index: 997">
                 <div class="divLeft">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">房屋租金</span>
+                    <span class="spanFWCZ">租金</span>
                 </div>
                 <div class="divRight">
                     <span id="spanZJ" class="spanFWLX SRK" style="display: inline-block;">
                         <input id="ZJ" maxlength="9" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 78px" />
-                        <span class="spanFontColor">元/月</span>
                     </span>
                     <div id="divYFFSText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanYFFS" column="YFFS" class="spanFWQK spanFontColor" style="margin-top: 0">押一付一</span>
+                            <span id="spanYFFS" column="YFFS" class="spanFWQK spanFontColor" style="margin-top: 0">元/天</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divYFFS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                     <div id="divZJTip" class="Warn" style="z-index: 996; position: relative;"></div>
-                </div>
-            </div>
-            <div id="divBHFY" class="divFWCZ" style="z-index: 994; height: 80px; margin-top: -18px;">
-                <div class="divLeft">
-                    <span class="required"></span>
-                    <span id="spanBHFY">包含费用</span>
-                </div>
-                <div id="divBHFYText" class="divRight" style="position: relative">
-                </div>
-            </div>
-            <div id="divFWPZ" class="divFWCZ" style="z-index: 996">
-                <div class="divLeft">
-                    <span class="required"></span>
-                    <span id="spanFWCZ">房屋配置</span>
-                </div>
-                <div id="divFWPZText" class="divRight" style="position: relative">
-                </div>
-            </div>
-            <div id="divXXXX" class="divSplit" style="display: block; text-align: left; margin-top: 100px;">
-                <span class="spanSplit">详细信息</span>
-                <em class="emSplit"></em>
-            </div>
-            <div id="divFWLD" class="divFWCZ" style="z-index: 995; height: 80px;">
-                <div class="divLeft">
-                    <span class="required"></span>
-                    <span id="spanFWLD">房屋亮点</span>
-                </div>
-                <div id="divFWLDText" class="divRight" style="position: relative">
-                </div>
-            </div>
-            <div id="divCZYQ" class="divFWCZ" style="z-index: 994; height: 80px;">
-                <div class="divLeft">
-                    <span class="required"></span>
-                    <span id="spanCZYQ">出租要求</span>
-                </div>
-                <div id="divCZYQText" class="divRight" style="position: relative">
                 </div>
             </div>
             <div id="divFYBT" class="divFWCZ" style="margin-top: 22px;">
