--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -13,7 +13,7 @@
     <link href="@Url.Content("~/Areas/Business/Css/LBXZ.css" )" rel="stylesheet" />
 </head>
 
-><body style="width: 100%; height: 100%;">
+<body style="width: 100%; height: 100%;">
 <div style="width: 1440px; text-align: center;">
     <div id="divLBHead" style="margin-left: 18%; margin-top: 20px;">
         <table class="table" style="width: 100%; text-align: center;">
