--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
@@ -56,18 +56,18 @@
                     <img class="iFWCZ" id="imgDJCZ" /><label class="labelFWCZ">&nbsp;&nbsp;日租房</label>
                 </div>
             </div>
-            <div id="divFWLX" class="divFWCZ">
+            <div id="divLX" class="divFWCZ" style="z-index: 998">
                 <div class="divLeft">
                     <span class="required">*</span>
                     <span class="spanFWCZ">类型</span>
                 </div>
                 <div class="divRight">
-                    <div class="spanFWLXOut">
-                        <div id="divFWLXText" class="spanFWLXIn SRK">
-                            <span id="spanFWLX" column="FWLX" class="spanFWQK spanFontColor">请选择类型</span>
+                    <div id="divFWLXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanFWLX" column="FWLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divFWLX" class="divdropdown">
+                        <div id="divFWLX" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                     最短租期
