--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FC/FC_FW.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FC/FC_FW.css
@@ -1,4 +1,31 @@
-﻿.divFWCZ {
+﻿body {
+    width: 100%;
+    height: 100%;
+    font-family: 微软雅黑;
+}
+
+.div_head {
+    margin-left: 15%;
+    margin-top: 20px;
+}
+
+.table {
+    width: 100%;
+    text-align: center;
+}
+
+.div_td_head {
+    width: 900px;
+}
+
+.span_cxlb {
+    color: #5bc0de;
+    cursor: pointer;
+    font-size: 12px;
+    margin-left: 2px;
+}
+
+.divFWCZ {
     width: 900px;
     text-align: left;
     padding-top: 2px;
@@ -45,7 +72,7 @@
 }
 
 .divFWQKArrow {
-    background-image: url(images/arrow_down.png);
+    background-image: url(../images/arrow_down.png);
     width: 16px;
     height: 16px;
     display: inline-block;
@@ -199,7 +226,7 @@
     height: 145px;
     display: inline-block;
     border: 1px solid #cccccc;
-    background-image: url(images/upload_small2.png);
+    background-image: url(../images/upload_small2.png);
 }
 
 .Warn {
@@ -285,7 +312,7 @@
 }
 
 .edit {
-    background-image: url(images/edit.png);
+    background-image: url(../images/edit.png);
     width: 20px;
     height: 20px;
     position: absolute;
@@ -296,12 +323,12 @@
 }
 
     .edit:active {
-        background-image: url(images/edit_select.png);
+        background-image: url(../images/edit_select.png);
     }
 
 
 .delete {
-    background-image: url(images/delete.png);
+    background-image: url(../images/delete.png);
     width: 20px;
     height: 20px;
     position: absolute;
@@ -312,7 +339,7 @@
 }
 
     .delete:active {
-        background-image: url(images/delete_select.png);
+        background-image: url(../images/delete_select.png);
     }
 
 #editImgWindow {
@@ -353,7 +380,7 @@
         position: absolute;
         right: 25px;
         top: 25px;
-        background-image: url(images/close.png);
+        background-image: url(../images/close.png);
         cursor: pointer;
     }
 
