--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FC/FC_DZF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FC/FC_DZF.css
@@ -1,4 +1,10 @@
-﻿.divFWCZ {
+﻿body {
+    width: 100%;
+    height: 100%;
+    font-family: 微软雅黑;
+}
+
+.divFWCZ {
     width: 900px;
     text-align: left;
     padding-top: 2px;
@@ -329,6 +335,20 @@
     margin-left: -467px;
 }
 
+#editDZWindow {
+    display: none;
+    border-radius: 4px;
+    width: 936px;
+    height: 562px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 1000;
+    background: #fff;
+    margin-top: -290px;
+    margin-left: -467px;
+}
+
 #editImgHead {
     width: 100%;
     height: 65px;
@@ -379,7 +399,6 @@
     top: 495px;
     width: 785px;
     height: 60px;
-    /*border: 1px solid #E1E1E1;*/
 }
 
 #editToolBar {
@@ -422,4 +441,54 @@
     z-index: 999;
     width: 100%;
     height: 100%;
+}
+
+.span_xzdz {
+    color: #31b0d5;
+    cursor: pointer;
+}
+
+    .span_xzdz:hover {
+        color: #ff6a00;
+    }
+
+.span_xzdz_img {
+    background-image: url(../images/expand_blue.png);
+    background-repeat: no-repeat;
+    vertical-align: middle;
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+:-ms-input-placeholder.input_dtss {
+    color: #999;
+}
+
+.btn_dtss {
+    background-image: url(../images/bddt_search.png);
+    width: 42px;
+    height: 34px;
+    display: inline-block;
+    border: none;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+    .btn_dtss:hover {
+        background-image: url(../images/bddt_search_hover.png);
+    }
+
+.input_dtss {
+    border: 1px solid #cccccc;
+    border-right: none;
+    display: inline-block;
+    height: 34px;
+    font-size: 14px;
+    width: 320px;
+    padding-left: 12px;
+    float: left;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
