--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
@@ -16,10 +16,11 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_DZFZP.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery.ui.datepicker-zh-CN.js")"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=134db1b9cf1f1f2b4427210932b34dcb"></script>
 </head>
-<body style="width: 100%; height: 100%; font-family: 微软雅黑">
-    <div style="width: 1440px; text-align: center;">
-        <div id="divLBHead" style="margin-left: 18%; margin-top: 20px;">
+<body>
+    <div>
+        <div id="divLBHead" style="margin-left: 15%; margin-top: 20px;">
             <table class="table" style="width: 100%; text-align: center;">
                 <tr>
                     <td class="headtd">
@@ -41,7 +42,7 @@
                 </tr>
             </table>
         </div>
-        <div id="myTabContent" style="margin-left: 18%; padding-bottom: 150px;">
+        <div id="myTabContent" style="margin-left: 15%; padding-bottom: 150px;">
             <div id="divJBXX" class="divSplit" style="display: block; text-align: left">
                 <span class="spanSplit">基本信息</span>
                 <em class="emSplit"></em>
@@ -56,8 +57,8 @@
                     <img class="iFWCZ" id="imgDJCZ" /><label class="labelFWCZ">&nbsp;&nbsp;日租房</label>
                 </div>
             </div>
-            <div id="divLX" class="divFWCZ" style="z-index: 998">
-                <div class="divLeft">
+            <div id="divLX" class="divFWCZ" style="z-index: 999">
+                <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">类型</span>
                 </div>
@@ -70,32 +71,70 @@
                         <div id="divFWLX" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    最短租期
-                    <span id="spanZDZQ" class="spanFWLX SRK" style="display: inline-block; width:114px;">
-                        <input id="ZDZQ" maxlength="9" column="ZDZQ" class="inputLCFB spanFontColor" type="text" style="width: 78px" />
+                </div>
+                <div class="divLeft" style="margin-left:10px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">最短租期</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanZDZQ" class="spanFWLX SRK" style="display: inline-block;">
+                        <input id="ZDZQ" maxlength="9" column="ZDZQ" class="inputLCFB spanFontColor" type="text" />
                         <span class="spanFontColor">天</span>
                     </span>
                     <div id="divLXTip" class="Warn"></div>
                 </div>
             </div>
             <div id="divZJ" class="divFWCZ" style="z-index: 997">
-                <div class="divLeft">
+                <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">租金</span>
                 </div>
                 <div class="divRight">
                     <span id="spanZJ" class="spanFWLX SRK" style="display: inline-block;">
-                        <input id="ZJ" maxlength="9" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 78px" />
+                        <input id="ZJ" maxlength="9" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 124px" />
                     </span>
-                    <div id="divYFFSText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divZJDWText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanYFFS" column="YFFS" class="spanFWQK spanFontColor" style="margin-top: 0">元/天</span>
+                            <span id="spanZJDW" column="ZJDW" class="spanFWQK spanFontColor" style="margin-top: 0">元/天</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divYFFS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divZJDW" class="divdropdown" style="margin-top: -7px;">
                         </div>
                     </div>
                     <div id="divZJTip" class="Warn" style="z-index: 996; position: relative;"></div>
+                </div>
+            </div>
+            <div id="divTS" class="divFWCZ" style="z-index: 995">
+                <div class="divLeft" style="margin-left: 128px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">特色</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanTS" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="TS" maxlength="6" column="TS" type="text" style="width:60px;" />
+                        <span class="spanFontColor">人宜租</span>
+                    </span>
+                </div>
+                <div class="divLeft" style="margin-left:10px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">面积</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanFWMJ" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="FWMJ" maxlength="9" column="FWMJ" type="text" />
+                        <span class="spanFontColor">㎡</span>
+                    </span>
+                    <div id="divFWMJTip" class="Warn"></div>
+                </div>
+            </div>
+            <div id="divDZ" class="divFWCZ" style="z-index: 994">
+                <div class="divLeft" style="margin-left: 128px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">地址</span>
+                </div>
+                <div class="divRight">
+                    <span class="span_xzdz_img"></span>
+                    <span class="span_xzdz" id="span_xzdz">新增地址</span>
                 </div>
             </div>
             <div id="divFYBT" class="divFWCZ" style="margin-top: 22px;">
@@ -223,6 +262,19 @@
             </div>
         </div>
         <input type="button" id="btnSavePhoto" class="btn btn-info" style="height: 34px; width:69px; position:absolute;bottom:14px;right:77px;" value="保&nbsp;&nbsp;存" />
+    </div>
+    <div id="editDZWindow">
+        <div id="editImgHead">
+            <span>新增地址</span>
+            <div id="div_dz_close"></div>
+        </div>
+        <div id="canvasFrame">
+            <div style="width:785px;height:435px;border:1px solid gray" id="container"></div>
+            <div style="position:absolute; top:6px; left:6px;">
+                <input class="input_dtss" id="input_dtss" type="text" placeholder="请输入地址，如：福州市鼓楼区东大路92号" />
+                <input class="btn_dtss" type="button" id="btn_dtss" />
+            </div>
+        </div>
     </div>
 </body>
 </html>
