--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
@@ -275,6 +275,7 @@
                 <input class="btn_dtss" type="button" id="btn_dtss" />
             </div>
         </div>
+        <input type="button" id="btn_savedz" class="btn btn-info" style="height: 34px; width:69px; position:absolute;bottom:14px;right:77px;" value="确&nbsp;&nbsp;定" />
     </div>
 </body>
 </html>
