--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -51,6 +51,7 @@
             <li class="li_head_right" id="liWDZJ">我的资金</li>
             <li class="li_head_right" id="liSHGJ">生活工具</li>
         </ul>
+        <span class="span_fbxx" id="span_fbxx">发布信息</span>
     </div>
     <div class="div_split" id="divSplit">
     </div>
