--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
@@ -83,7 +83,7 @@
                         <input id="ZDZQ" maxlength="9" column="ZDZQ" class="inputLCFB spanFontColor" type="text" />
                         <span class="spanFontColor">天</span>
                     </span>
-                    <div id="divLXTip" class="Warn"></div>
+                    <div id="divZDZQTip" class="Warn" style="margin-left:476px;"></div>
                 </div>
             </div>
             <div id="divZJ" class="divFWCZ" style="z-index: 997">
@@ -112,8 +112,8 @@
                     <span class="spanFWCZ">特色</span>
                 </div>
                 <div class="divRight">
-                    <span id="spanTS" class="spanFWLX SRK" style="display: inline-block;">
-                        <input class="inputLCFB spanFontColor" id="TS" maxlength="6" column="TS" type="text" style="width:60px;" />
+                    <span id="spanYZRS" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="YZRS" maxlength="6" column="YZRS" type="text" style="width:60px;" />
                         <span class="spanFontColor">人宜租</span>
                     </span>
                 </div>
@@ -122,11 +122,18 @@
                     <span class="spanFWCZ">面积</span>
                 </div>
                 <div class="divRight">
-                    <span id="spanFWMJ" class="spanFWLX SRK" style="display: inline-block;">
-                        <input class="inputLCFB spanFontColor" id="FWMJ" maxlength="9" column="FWMJ" type="text" />
+                    <span id="spanMJ" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="MJ" maxlength="9" column="MJ" type="text" />
                         <span class="spanFontColor">㎡</span>
                     </span>
-                    <div id="divFWMJTip" class="Warn"></div>
+                </div>
+            </div>
+            <div class="divFWCZ" style="z-index: 995">
+                <div class="divLeft" style="margin-left:10px;">
+                </div>
+                <div class="divRight">
+                    <div id="divYZRSTip" class="Warn" style="float:left;"></div>
+                    <div id="divMJTip" class="Warn" style="margin-left: 47px;float:left;"></div>
                 </div>
             </div>
             <div id="divDZ" class="divFWCZ" style="z-index: 994">
