--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_FW/FC_FW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_FW/FC_FW.cshtml
@@ -219,7 +219,7 @@
             </div>
             <div id="divFYMS" class="divFWCZ" style="height: 170px;">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required" style="vertical-align: top"></span>
+                    <span class="required" style="vertical-align: top">*</span>
                     <span id="spanFYMS" style="vertical-align: top">房源描述</span>
                 </div>
                 <div class="divRight">
@@ -229,7 +229,7 @@
             <div id="divFWZP" class="divFWCZ">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required" style="vertical-align: top">*</span>
-                    <span id="spanFWZP" style="vertical-align: top">房屋照片</span>
+                    <span id="spanFWZP" style="vertical-align: top">上传照片</span>
                 </div>
                 <div class="divRight">
                     <div id="divUploadOut" class="divUploadOut">
