--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
@@ -167,8 +167,9 @@
                 </div>
                 <div class="divRight">
                     @*<textarea id="FYMS" class="spanFWLX SRK" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999"></textarea>*@
-                    <script id="editor" type="text/plain" style="width:594px;height:190px;display:inline-block">
+                    <script id="FYMS" type="text/plain" style="width:594px;height:190px;display:inline-block">
                     </script>
+                    <div id="divFYMSTip" class="Warn"></div>
                 </div>
             </div>
             <div id="divJYGZ" class="divFWCZ" style="height: 200px;">
@@ -245,6 +246,9 @@
                 <div class="divRight">
                     <input column="QQ" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请输入QQ" />
                 </div>
+            </div>
+            <div id="divFB" class="divSplit" style="display: block; text-align: center; margin-top: 40px;">
+                <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布" />
             </div>
         </div>
     </div>
