--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
@@ -67,7 +67,7 @@
                 <div class="divRight">
                     <div id="divFWLXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanFWLX" column="FWLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
+                            <span id="spanFWLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divFWLX" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
@@ -97,7 +97,7 @@
                     </span>
                     <div id="divZJDWText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanZJDW" column="ZJDW" class="spanFWQK spanFontColor" style="margin-top: 0">元/天</span>
+                            <span id="spanZJDW" class="spanFWQK spanFontColor" style="margin-top: 0">元/天</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divZJDW" class="divdropdown" style="margin-top: -7px;">
@@ -167,7 +167,7 @@
                 </div>
                 <div class="divRight">
                     @*<textarea id="FYMS" class="spanFWLX SRK" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999"></textarea>*@
-                    <script id="FYMS" type="text/plain" style="width:594px;height:190px;display:inline-block">
+                    <script id="FYMS" type="text/plain" style="width:594px;height:200px;display:inline-block;">
                     </script>
                     <div id="divFYMSTip" class="Warn"></div>
                 </div>
