--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/_ListLayout.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/_ListLayout.cshtml
@@ -10,7 +10,7 @@
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Regular.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/PageJson.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/UEditor/ueditor.config.js")></script>
-    <script src=@Url.Content("~/Areas/Business/Scripts/UEditor/ueditor.all.min.js")></script>
+    <script src=@Url.Content("~/Areas/Business/Scripts/UEditor/ueditor.all.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/UEditor/lang/zh-cn/zh-cn.js")></script>
     @RenderSection("Section_Head", false)
 }
