--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -26,7 +26,7 @@
             </div>
             <span class="span_top_right_split"></span>
             <div class="div_top_right_inner" id="div_top_right_inner_yhm">
-                <span class="span_top_right span_top_right_yhm_text" id="span_top_right_yhm_text"></span>
+                <span class="span_top_right span_top_right_yhm_text" id="span_top_right_yhm_text">@ViewData["YHM"]</span>
                 <span class="span_top_right_yhm" id="span_top_right_yhm_img"></span>
                 <div class="div_top_right_dropdown_yhm" id="div_top_right_dropdown_yhm">
                     <ul class="ul_top_right_yhm">
